[tool.poetry]
name = "aoc-2015"
version = "0.1.0"
description = ""
authors = ["Michael Patterson <mjpatter88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
